--- a/Smart-Calculator/Smart-Calculator.html
+++ b/Smart-Calculator/Smart-Calculator.html
@@ -87,35 +87,38 @@
             font-size: 1.6rem;
             margin: 10px;
             border-radius: 16px;
-            transition: all 0.3s ease;
+            transition: all 0.25s ease-in-out;
             cursor: pointer;
+            transform: translateY(0);
         }
 
         .btn:hover {
-            transform: scale(1.08);
-            filter: brightness(1.2);
+            transform: translateY(-4px) scale(1.04);
+            filter: brightness(1.08);
         }
 
         .btn:active {
-            transform: scale(0.95);
+            transform: translateY(0) scale(0.95);
+            filter: brightness(0.95);
         }
 
+        /* 🔹 Button Variants */
         .operate-btn {
             background-color: #14b8a6;
             color: #fff;
-            box-shadow: 0 4px 10px rgba(20, 184, 166, 0.4);
+            box-shadow: 0 6px 15px rgba(20, 184, 166, 0.25);
         }
 
         .others-btn {
             background-color: #374151;
             color: #e5e7eb;
-            box-shadow: 0 4px 10px rgba(55, 65, 81, 0.4);
+            box-shadow: 0 6px 15px rgba(55, 65, 81, 0.25);
         }
 
         .numbers {
             background: #1f2937;
             color: #f3f4f6;
-            box-shadow: 0 4px 10px rgba(31, 41, 55, 0.5);
+            box-shadow: 0 6px 15px rgba(31, 41, 55, 0.25);
         }
 
         .btn-lg {
@@ -141,6 +144,12 @@
                         <button type="button" class="btn others-btn" onclick="lastDel()">Del</button>
                         <button type="button" class="btn others-btn" onclick="setOperator('%')">%</button>
                         <button type="button" class="btn operate-btn" onclick="setOperator('/')">/</button>
+                    </div>
+                    <div class="btn-line">
+                        <button type="button" class="btn others-btn" onclick="square()">x<sup>2</sup></button>
+                        <button type="button" class="btn others-btn" onclick="cube()">x<sup>3</sup></button>
+                        <button type="button" class="btn others-btn" onclick="factorial()">n!</button>
+                        <button type="button" class="btn operate-btn" onclick="oddEven()">E/O</button>
                     </div>
                     <div class="btn-line">
                         <button type="button" class="btn numbers" onclick="insertValue('7')">7</button>
@@ -216,8 +225,23 @@
             if (operator === "+") result = n1 + n2;
             else if (operator === "-") result = n1 - n2;
             else if (operator === "x") result = n1 * n2;
-            else if (operator === "/") result = n1 / n2;
+            else if (operator === "/") {
+                if (n2 === 0) {
+                    display.value = "Error";
+                    num1 = "";
+                    num2 = "";
+                    operator = "";
+                    return;
+                }
+                result = n1 / n2
+            }
             else if (operator === "%") result = n1 % n2;
+            result = Number(result.toFixed(5));
+
+            if (isNaN(result)) {
+                display.value = "Error";
+                return;
+            }
 
             display.value = result;
             num1 = result.toString();
@@ -239,8 +263,68 @@
                 display.value = num1 + " " + operator + " " + num2;
 
             }
-
         };
+        function square() {
+            let value = parseFloat(display.value);
+            if (isNaN(value)) {
+                display.value = "Error";
+                return;
+            }
+            display.value = value * value;
+            num1 = display.value;
+            num2 = "";
+            operator = "";
+
+        }
+        function cube() {
+            let value = parseFloat(display.value);
+            if (isNaN(value)) {
+
+                display.value = "Error";
+                return;
+
+            }
+            display.value = value * value * value;
+            num1 = display.value;
+            num2 = "";
+            operator = "";
+
+        }
+        function factorial() {
+            let value = parseInt(display.value);
+            if (value > 170) {
+                display.value = "Error";
+                return;
+            }
+            if (isNaN(value) || value < 0) {
+                display.value = "Error";
+                return;
+            }
+            let fact = 1;
+            for (let i = 1; i <= value; i++) {
+                fact *= i;
+            }
+            display.value = fact;
+            num1 = display.value;
+            num2 = "";
+            operator = "";
+        }
+        function oddEven() {
+            let value = parseInt(display.value);
+            if (isNaN(value)) {
+                display.value = "Error";
+                return;
+            }
+            if (value % 2 === 0) {
+                display.value = `${value} (Even)`;
+            } else {
+                display.value = `${value} (Odd)`;
+            }
+            num1 = value.toString();
+            num2 = "";
+            operator = "";
+        }
+
     </script>
 </body>
 
