--- a/Smart-Calculator/Smart-Calculator.html
+++ b/Smart-Calculator/Smart-Calculator.html
@@ -300,10 +300,12 @@
                 display.value = "Error";
                 return;
             }
-            let fact = 1;
-            for (let i = 1; i <= value; i++) {
-                fact *= i;
+            function recursiveFact(n) {
+                if (n === 0 || n === 1) return 1;
+                return n * recursiveFact(n - 1);
             }
+
+            let fact = recursiveFact(value);
             display.value = fact;
             num1 = display.value;
             num2 = "";
@@ -329,3 +331,4 @@
 </body>
 
 </html>
+
